<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent" android:id="@+id/main_container"
    android:background="@drawable/connection_box"
    android:layout_height="match_parent">

<aero.developer.bagnet.CustomViews.DialogTextView
    android:id="@+id/location_identified"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="18sp"
    android:text="@string/location_identifed"
    android:layout_marginTop="@dimen/padding_30"
    android:textColor="@color/gray"/>

    <ImageView
        android:id="@+id/my_location"
        android:layout_width="@dimen/image_50dp"
        android:layout_height="@dimen/image_50dp"
        app:srcCompat="@drawable/ic_my_location"
        android:adjustViewBounds="true"
        android:layout_below="@+id/location_identified"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_10"
        />

    <aero.developer.bagnet.CustomViews.HeaderTextView
        android:id="@+id/Txtgate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_location"
        android:text="@string/gate"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:paddingTop="@dimen/padding_10"
        android:gravity="center"/>

    <aero.developer.bagnet.CustomViews.DialogTextView
        android:id="@+id/timeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_timeout"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:layout_below="@+id/Txtgate"
        android:paddingTop="@dimen/padding_10"
        android:gravity="center"/>

    <aero.developer.bagnet.CustomViews.DigitalTextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:gravity="center"
        android:textSize="@dimen/time_text_size"
        android:layout_below="@+id/timeout"
        android:paddingTop="@dimen/padding_10"
        android:layout_marginBottom="@dimen/padding_30"
        android:textColor="@color/orange"/>


</RelativeLayout>