<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/main_container"
    android:padding="20dp"
    android:background="@drawable/connection_box"
    android:layout_height="wrap_content">


    <ImageView
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/img_info"
        android:src="@drawable/ic_info"
        android:layout_width="50dp"
        android:tint="@color/white"
        android:layout_height="50dp" />

    <aero.developer.bagnet.CustomViews.DialogTextView
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/img_info"
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/considerChangePass"
        style="@style/text_xsmall_bold_primary"
        />
    <aero.developer.bagnet.CustomViews.DialogTextView
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txt_title"
        android:id="@+id/txt_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordExpiryMessage"
        style="@style/text_xsmall_primary"
        />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_below="@+id/txt_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_margin="10dp"
        android:id="@+id/changePasswordNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_gray_background"
        android:textColor="@color/white"
        android:text="@string/changePasswordNow"/>

    <aero.developer.bagnet.CustomViews.CustomButton
        android:layout_margin="10dp"
        android:id="@+id/later"
        style="@style/AppTheme.LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:paddingLeft="30dp"
        android:text="@string/later" />
    </LinearLayout>
    </RelativeLayout>