<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_screen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/trans_gray">

    <LinearLayout
        android:id="@+id/backContainer"
        android:padding="20dp"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:tint="@color/white"
            android:src="@drawable/ic_back"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <aero.developer.bagnet.CustomViews.HeaderTextView
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            style="@style/text_medium_primary"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:layout_below="@+id/backContainer"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <RelativeLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

          <LinearLayout
        android:layout_above="@+id/lowerConatiner"
        android:paddingLeft="@dimen/padding_50"
        android:paddingRight="@dimen/padding_50"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <aero.developer.bagnet.CustomViews.AutoresizeTextView
            android:id="@+id/txt_userId"
            android:layout_gravity="center"
            style="@style/text_large_primary"
            custom:typefaceAsset="fonts/SourceSansPro-Regular.otf"

            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1" />
        <aero.developer.bagnet.CustomViews.CustomButton
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/save_shape"
            android:text="@string/changePassword"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp" />

        <aero.developer.bagnet.CustomViews.CustomButton
            android:id="@+id/clear_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/save_shape"
            android:text="@string/clear_container"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/padding_10"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp" />

        <aero.developer.bagnet.CustomViews.CustomButton
            android:id="@+id/clear_flight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:background="@drawable/save_shape"
            android:text="@string/clear_flight"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp" />

        <aero.developer.bagnet.CustomViews.CustomButton
            android:id="@+id/clear_tracking_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:background="@drawable/save_shape"
            android:text="@string/clear_tracking_point"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp" />
    </LinearLayout>

          <LinearLayout
        android:id="@+id/lowerConatiner"
        android:paddingLeft="@dimen/padding_50"
        android:paddingRight="@dimen/padding_50"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_20"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <aero.developer.bagnet.CustomViews.CustomButton
            android:id="@+id/credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/save_shape"
            android:text="@string/credits"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp" />

        <aero.developer.bagnet.CustomViews.CustomButton
            android:id="@+id/restart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/save_shape"
            android:text="@string/restart"
            android:layout_marginTop="@dimen/padding_10"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp" />

        <aero.developer.bagnet.CustomViews.CustomButton
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/save_shape"
            android:text="@string/signOut"
            android:layout_marginTop="@dimen/padding_10"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp" />

    </LinearLayout>

    </RelativeLayout>
    </ScrollView>

   <LinearLayout
        android:visibility="gone"
        android:clickable="true"
        android:background="@color/transwhite"
        android:id="@+id/progressbarContainer"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:focusable="true">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
